<resources>
    <string name="app_name">NotesOne</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="details">Details</string>
</resources>